--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-<<<<<<< HEAD
-/.vs
-=======
-/.vs
->>>>>>> 0e74b0a0e451637884398fd8afbe6d40caea456e
+.vs
+packages
+FNS_MFC/bin/Debug*.config
+FNS_MFC/bin/Debug*.pdb
+
